kube/deploy/core/1-kube-system/cilium/netpols/flux-system.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app flux-system
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # allow all to public Internet
    - toEntities:
        - world
    # TODO: confirm if these are the only ports Flux uses, as well as what FQDNs Flux talks to (GitHub only? then why 443?)
    - toEntities: [world]
      toPorts:
        - ports:
            - port: '22'
        - ports:
            - port: '443'
    # k8s apiserver
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: default
            component: apiserver
            provider: kubernetes
    - toEntities: [kube-apiserver]
    - toEntities: [host]
      toPorts:
        - ports:
            - port: '6443'
