kube/deploy/core/1-kube-system/cilium/netpols/kube-system-allow-all.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kube-system-allow-all
  namespace: kube-system
spec:
  endpointSelector: {}
  ingress:
    - fromEntities: [cluster]
    - fromEndpoints:
        - {}
    - fromEntities: [world]
  egress:
    - toEntities: [world]
    - toEndpoints:
        - {}
    - toEntities: [cluster]
