kube/deploy/core/1-kube-system/cilium/netpols/labelled-allow-ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-ingress-world
spec:
  endpointSelector:
    matchLabels:
      ingress.home.arpa/world: allow
  ingress:
    - fromEntities:
        - "world"

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-ingress-cluster
spec:
  endpointSelector:
    matchLabels:
      ingress.home.arpa/cluster: allow
  ingress:
    - fromEntities:
        - "cluster"

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-ingress-internet
spec:
  endpointSelector:
    matchLabels:
      ingress.home.arpa/internet: allow
  ingress:
    - fromCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - ${LAN_NETWORK}/16
            - ${ISP_NETWORK}/24

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-ingress-host
spec:
  endpointSelector:
    matchLabels:
      ingress.home.arpa/host: allow
  ingress:
    - fromEntities:
        - host

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-ingress-apiserver
spec:
  endpointSelector:
    matchLabels:
      ingress.home.arpa/apiserver: allow
  ingress:
    - fromEntities:
        - kube-apiserver

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-ingress-remote-node
spec:
  endpointSelector:
    matchLabels:
      ingress.home.arpa/remote-node: allow
  ingress:
    - fromEntities:
        - remote-node
